fix course section mobile version

--- a/src/app/course-section/course-section.component.scss
+++ b/src/app/course-section/course-section.component.scss
@@ -26,3 +26,32 @@
         }
     }
 }
+
+
+// ----------
+
+
+@media (max-width:768px) {
+
+
+    .course-jet{
+        padding: 0 24px;
+        .container{
+            .row{
+                .col-md-6{
+                    h3{
+                    font-size: 24px;
+                    }  
+                    h5{
+                        font-size: 20px;
+                    } 
+                    p{
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
